--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.0",
     "@types/jsonwebtoken": "^8.5.9",
-    "@types/node": "^18.11.7",
+    "@types/node": "^18.11.9",
     "@types/supertest": "^2.0.12",
     "cross-env": "^7.0.3",
     "jest": "^29.2.2",
@@ -25,8 +25,9 @@
   },
   "author": "Cola&Bora",
   "dependencies": {
-    "class-transformer": "^0.5.1",
+    "@types/uuid": "^8.3.4",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
