--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
     "typeorm": "typeorm-ts-node-commonjs",
-    "test": "cross-env NODE_ENV=test SECRET_KEY=1234 jest"
+    "test": "cross-env NODE_ENV=test SECRET_KEY=1234 jest --verbose --forceExit"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
