fix: configs production

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,3 @@
-HOST=localhost
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=cola_e_bora
+DATABASE_URL="postgres://user:password@localhost:5432/db"
 SECRET_KEY=
 PORT=
-PGPORT=
